<resources>
    <string name="app_name">PHL</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="calibration_fragment_label">Calibration Fragment</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="start_workflow">Start Workflow</string>
    <string name="spasticity_test">Spasticity Test</string>
    <string name="tactile_sensation_test">Tactile Sensation Test</string>
    <string name="previous">Previous</string>
    <string name="vibrate">Vibrate</string>
    <string name="calibrate_with_another_object">Calibrate with another object</string>
    <string name="stop">Stop</string>
    <string name="toggle">View Gyroscope Data Instead of TouchScreen Sensor Data</string>
    <string name="tactile_sensation_test_description">Please hold the phone using the affected hand. During the assessment. Use the other hand to click on the button to continue. The test aims to measure the ability to feel the vibration of the phone. The phone will vibrate with different intensities. You will be asked to click on the button to indicate whether you felt the vibration or not. Each vibration is about 5 seconds.</string>
    <string name="hello_first_fragment">Touch blank space and move your finger for screen sensor readings (not all phones support them). Put the phone on a hard surface and click the button for vibration. During vibration, touchscreen sensor readings are disabled. Note: placing your finger at different locations during vibration, even with the same amount of force, can have dramatically different effects on the gyroscope readings. It is recommended that you place your finger at the center of the phone screen to measure the relative pressure your finger applies to the screen during vibration.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_diagnosis_workflow">DiagnosisWorkflowActivity</string>
    <string name="place_phone">Place your phone on a hard surface. </string>
    <string name="input_weight">You are now required to place an object of known weight at the CENTER of the phone screen. Please input the weight of the object below.</string>
    <string name="oz">ounces</string>
    <string name="g">grams</string>
    <string name="do_not_place_object">Do not place any objects on the phone.</string>
    <string name="place_object">You will see concentric circles at the center of the phone screen. This is where you will place your object.</string>
    <string name="click_vibrate">Click the button to vibrate the phone.</string>
    <string name="wait_5_seconds">Wait 5 seconds for the vibration to stop.</string>
    <string name="continue_to_next">Click the button to continue.</string>
    <string name="calibration_complete">Calibration complete. Click the button to continue to the next step.</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="weight">Weight</string>
    <string name="place_fingers">Place your index finger, middle finger, and ring finger on the center of the phone screen.</string>
    <string name="phone_will_vibrate_5">The phone will vibrate for 5 seconds.</string>
    <string name="phone_will_vibrate_20">The phone will vibrate for 20 seconds.</string>
    <string name="counting_down">Counting down</string>
    <string name="place_hand">With the help of the other hand, unfold your affected hand. Place your index finger, middle finger, ring finger, and pinky finger of the affected hand on the center of the phone screen like what is shown in the picture below. The palm of the affected hand must stay on the table. Then, use the unaffected hand to click on the "vibrate" button. When the phone starts vibrating, try the best to lift the fingers (without help from the other hand) so that they do not touch the screen.</string>
    <string name="force">Force (N):</string>
    <string name="total_data_points_needed">Total data points needed: %d</string>
    <string name="i_felt_the_vibration">I felt the vibration</string>
    <string name="i_did_not_feel_the_vibration">I did not feel the vibration</string>
    <string name="i_am_not_sure">I am not sure</string>
    <string name="start_spasticity_test">Start Spasticity Test</string>
    <string name="start_tactile_sensation_test">Start Tactile Sensation Test</string>
    <string name="view_my_progress">View My Progress</string>
    <string name="start_workflow_v2">Start Workflow v2</string>
    <string name="tactile_sensation">Tactile Sensation</string>
    <string name="spasticity">Spasticity</string>
    <string name="start_workflow_legacy">Start Workflow (Legacy)</string>
    <string name="do_not_press_or_squeeze">Do not press or squeeze the phone.</string>
    <string name="connecting_to_server">Connecting to Server...</string>
    <string name="no_internet_connection_remote_control_is_not_available">No Internet Connection! Remote Control is not available.</string>
    <string name="qr_code_for_remote_control">QR Code for Remote Control</string>
    <string name="media_pipe">MediaPipe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum hand results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum hand results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of hand detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of hand detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the hand landmarker.</string>
    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_hands">Number of Hands</string>
    <string name="label_delegate">Delegate</string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string name="title_activity_tilt_test">TiltTestActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ball_test">Ball Test</string>
    <string name="tilt_test">Tilt Test</string>
    <string name="modified_ashworth_scale_test">Modified Ashworth Scale Test</string>
    <string name="title_activity_mas">MasActivity</string>
    <string name="angular_acceleration">Angular Acceleration</string>
    <string name="angular_velocity">Angular Velocity</string>
    <string name="camera_test_instruction_1">In this test, you will hold your phone with the unaffected hand and point the camera at the affected hand. You will be asked to clench and then unfurl your affected hand multiple times. Your hand dexterity will be measured.</string>
    <string name="clench_hand">Please clench your affected hand, making sure your fingers are as tightly clenched as possible. Make sure the camera is facing the hand. We will record your hand movement for 10 seconds."</string>
    <string name="open_hand">Please open your hand by extending your fingers. Try your best to keep your hand open. We will record your hand movement for 10 seconds.</string>
    <string name="start">Start</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>