<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tactile_sensation_test_description"
        android:textSize="20sp"
        android:paddingBottom="16dp"/>

    <com.skyfishjy.library.RippleBackground
        android:visibility="gone"
        android:id="@+id/ripple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rb_color="#0099CC"
        app:rb_duration="3000"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_scale="6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="302dp">
    </com.skyfishjy.library.RippleBackground>

    <com.example.phl.views.MyButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        app:group="forward"/>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="16dp"
        >

        <com.example.phl.views.MyButton
            android:id="@+id/felt_vibration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_felt_the_vibration"
            app:group="yes"
            />

        <com.example.phl.views.MyButton
            android:id="@+id/did_not_feel_vibration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_did_not_feel_the_vibration"
            app:group="no"
            />

        <com.example.phl.views.MyButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_not_sure"
            android:id="@+id/i_am_not_sure_button"
            app:group="uncertain"
            />
    </LinearLayout>

</LinearLayout>
