<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/qr_code_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_spasticity_test"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tactile_sensation_test"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_my_progress"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
